--- a/user/mycroft-skills.service
+++ b/user/mycroft-skills.service
@@ -9,7 +9,7 @@ Type=notify
 WorkingDirectory=%h/mycroft-core
 Environment=PYTHONPATH=%h/mycroft-core/.venv/bin
 Environment=PYTHONUNBUFFERED=1
-ExecStart=%h/mycroft-core/.venv/bin/python systemd_mycroft_skills.py
+ExecStart=%h/mycroft-core/.venv/bin/python %h/mycroft-core/.venv/bin/systemd_mycroft_skills.py
 StandardOutput=file:/var/log/mycroft/skills.log
 StandardError=file:/var/log/mycroft/skills.error.log
 Restart=on-failure
