--- a/user/mycroft-skills.service
+++ b/user/mycroft-skills.service
@@ -9,10 +9,16 @@ Type=notify
 WorkingDirectory=%h/mycroft-core
 Environment=PYTHONPATH=%h/mycroft-core/.venv/bin
 Environment=PYTHONUNBUFFERED=1
-ExecStart=%h/mycroft-core/.venv/bin/python %h/mycroft-core/.venv/bin/systemd_mycroft_skills.py
+ExecStart=%h/mycroft-core/.venv/bin/python %h/mycroft-core/mycroft-systemd/scripts/systemd_mycroft_skills.py
 StandardOutput=file:/var/log/mycroft/skills.log
 StandardError=file:/var/log/mycroft/skills.error.log
+TimeoutStartSec=1m
+TimeoutStopSec=1m
 Restart=on-failure
+StartLimitInterval=5min
+StartLimitBurst=4
+#StartLimitAction=reboot-force
+#WatchdogSec=30s
 
 [Install]
 WantedBy=mycroft.service
