--- a/user/mycroft-skills.service
+++ b/user/mycroft-skills.service
@@ -18,7 +18,7 @@ Restart=on-failure
 StartLimitInterval=5min
 StartLimitBurst=4
 #StartLimitAction=reboot-force
-#WatchdogSec=30s
+WatchdogSec=30s
 
 [Install]
 WantedBy=mycroft.service
