--- a/user/mycroft-messagebus.service
+++ b/user/mycroft-messagebus.service
@@ -4,12 +4,20 @@ PartOf=mycroft.service
 After=mycroft.service
 
 [Service]
+Type=notify
 WorkingDirectory=%h/mycroft-core
 Environment=PYTHONPATH=%h/mycroft-core/.venv/bin
-ExecStart=%h/mycroft-core/.venv/bin/python -m mycroft.messagebus.service
+Environment=PYTHONUNBUFFERED=1
+ExecStart=%h/mycroft-core/.venv/bin/python %h/mycroft-core/mycroft-systemd/scripts/systemd_messagebus.py
 StandardOutput=file:/var/log/mycroft/bus.log
 StandardError=file:/var/log/mycroft/bus.error.log
+TimeoutStartSec=1m
+TimeoutStopSec=1m
 Restart=on-failure
+StartLimitInterval=5min
+StartLimitBurst=4
+#StartLimitAction=reboot-force
+WatchdogSec=30s
 
 [Install]
 WantedBy=mycroft.service
