--- a/user/ovos-phal.service
+++ b/user/ovos-phal.service
@@ -8,14 +8,12 @@ After=ovos-messagebus.service
 Type=notify
 Environment=PYTHONPATH=%/.venv/bin
 Environment=PYTHONUNBUFFERED=1
-ExecStart=%h.venv/bin/python %h/.local/bin/systemd/systemd_phal.py
+ExecStart=%h/.venv/bin/python %h/.local/bin/systemd/systemd_phal.py
 TimeoutStartSec=1m
 TimeoutStopSec=1m
 Restart=on-failure
 StartLimitInterval=5min
 StartLimitBurst=4
-#StartLimitAction=reboot-force
-WatchdogSec=30s
 
 [Install]
 WantedBy=ovos.service
