--- a/system/ovos-audio.service
+++ b/system/ovos-audio.service
@@ -5,7 +5,7 @@ After=ovos.service
 After=ovos-messagebus.service
 
 [Service]
-User=ovos #Change this to the user that runs ovos
+User=%u
 Type=notify
 Environment=PYTHONPATH=%h/.venv/bin
 Environment=PYTHONUNBUFFERED=1
@@ -15,8 +15,6 @@ TimeoutStopSec=1m
 Restart=on-failure
 StartLimitInterval=5min
 StartLimitBurst=4
-#StartLimitAction=reboot-force
-WatchdogSec=30s
 
 [Install]
 WantedBy=ovos.service
